@@ -117,6 +117,9 @@ New Features
   double hash will be used to lookup records or as the default value
 - Service to lookup IP geo data (from freegeoip.net), called by default on
   login (can be disabled with server-stats.@visit-ip-info-on-login)
+- Transaction Cache better supports creates/updates/deletes within a
+  transaction; instead of consolidating all changes into one it keeps a
+  list of changes and runs in order to avoid issues with foreign keys, etc
 
 Bug Fixes
 
